--- a/your-code/challenge-1 good 1.ipynb
+++ b/your-code/challenge-1 good 1.ipynb
@@ -66,7 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/alvaropalmero/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer \n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +112,32 @@
     "\n",
     "    Returns:\n",
     "        A string that has been cleaned up.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    string = re.sub(r'http\\S+', '', s)\n",
+    "    return re.sub('[^A-Za-z]+', ' ', string).lower().strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ironhack s q website is'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\"\n",
+    "\n",
+    "test_string = clean_up(test)\n",
+    "test_string"
    ]
   },
   {
@@ -101,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +172,29 @@
     "\n",
     "    Returns:\n",
     "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    return nltk.word_tokenize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_string = tokenize(test_string)\n",
+    "test_string"
    ]
   },
   {
@@ -145,11 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stem_and_lemmatize(l):\n",
+    "    \n",
     "    \"\"\"\n",
     "    Perform stemming and lemmatization on a list of words.\n",
     "\n",
@@ -158,7 +239,17 @@
     "\n",
     "    Returns:\n",
     "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    ps = nltk.PorterStemmer()\n",
+    "    lemmatizer = nltk.WordNetLemmatizer()\n",
+    "    l2 = []\n",
+    "    \n",
+    "    for w in l:\n",
+    "        s = ps.stem(w)\n",
+    "        s = lemmatizer.lemmatize(s)\n",
+    "        l2 += [s]\n",
+    "    \n",
+    "    return l2"
    ]
   },
   {
@@ -176,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ironhack q website\n"
+     ]
+    }
+   ],
    "source": [
     "def remove_stopwords(l):\n",
     "    \"\"\"\n",
@@ -189,7 +288,12 @@
     "\n",
     "    Returns:\n",
     "        A list of strings after stop words are removed.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    stop_words = stopwords.words('english')\n",
+    "\n",
+    "    return ' '.join([w for w in l if w not in stop_words])\n",
+    "\n",
+    "print(remove_stopwords(test_string))"
    ]
   },
   {
@@ -204,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
